--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -10,6 +10,7 @@
 .home_container h1 {
   font-size: 2.5em;
   margin-bottom: .5em;
+  text-align: center;
 }
 
 .home_container h1 span {
@@ -22,6 +23,7 @@
 .home_container p{ 
   margin-bottom: 1.5em;
   color: #7b7b7b;
+  text-align: center;
 }
 
 .home_container img{
