--- a/src/components/layout/LinkButton.module.css
+++ b/src/components/layout/LinkButton.module.css
@@ -4,6 +4,10 @@
   padding: .5em 1em;
   text-decoration: none;
   border-radius: 6px;
+  
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
 
 .btn:hover {
