--- a/src/components/layout/NavBar.module.css
+++ b/src/components/layout/NavBar.module.css
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: space-between;
   background-color: #222;
-  padding: 1em;
-  padding-inline: 4.5vw;
+  padding: 1em 4.5vw;
   width: 100%;
 }
 
