--- a/src/components/pages/Project.module.css
+++ b/src/components/pages/Project.module.css
@@ -1,5 +1,5 @@
 .project_details {
-  margin-block: 2em;
+  margin: 2em 0 2em 0;
 }
 
 .project_details h1,
@@ -8,9 +8,13 @@
   margin-bottom: 0.5em;
 }
 
-.project_details h1 {
-  margin-bottom: 1em;
+.project_details p:nth-child(3){
+  margin-bottom: 0;
 }
+
+ .project_details h1 {
+  margin-bottom: 0;
+} 
 
 .project_details span {
   font-weight: bold;
@@ -26,6 +30,14 @@
   flex-wrap: wrap;
 }
 
+.service_form_container h2 {
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  margin-bottom: 0;
+}
+
 .btn {
   font-size: 1em;
   display: flex;
@@ -37,7 +49,7 @@
   padding: .5em 1em;
   text-decoration: none;
   border-radius: 6px;
-  
+
   cursor: pointer;
   max-height: 40px;
   border: none;
@@ -50,5 +62,6 @@
 
 .project_info {
   width: 100%;
+  margin-top: 2em;
 }
 
